--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,16 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+database/node_modules
+database/DynamoDBLocal_lib
+database/DynamoDBLocal.jar
+database/dynamodb_local_latest.zip
+database/shared-local-instance.db
+database/dynamodb_local/DynamoDBLocal_lib
+database/dynamodb_local/dynamodb-local-metadata.json
+database/dynamodb_local/DynamoDBLocal.jar
+database/dynamodb_local/LICENSE.txt
+database/dynamodb_local/README.txt
+database/dynamodb_local/shared-local-instance.db
+database/dynamodb_local/THIRD-PARTY-LICENSES.txt
+database/THIRD-PARTY-LICENSES.txt
