--- a/database/package.json
+++ b/database/package.json
@@ -14,9 +14,10 @@
     "@aws-sdk/client-dynamodb": "^3.682.0",
     "@aws-sdk/lib-dynamodb": "^3.685.0",
     "aws-sdk": "^2.1691.0",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.3",
+    "express": "^4.21.1",
     "http-errors": "^2.0.0",
     "pino": "^8.19.0",
     "pino-http": "^9.0.0",
