--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.10",
     "gh-pages": "^6.1.1",
+    "lucide-react": "^0.454.0",
     "plotly.js": "^2.32.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
