--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.682.0",
-    "@aws-sdk/lib-dynamodb": "^3.685.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -19,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.10",
     "gh-pages": "^6.1.1",
+    "lucide-react": "^0.454.0",
     "plotly.js": "^2.32.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
